force-app/main/default/objects/Account/fields/CONTACT1234__c.field-meta.xml
<CustomField>
    <fullName>CONTACT1234__c</fullName>
    <description>collects information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CONTACT1234</label>
    <type>TextArea</type>
</CustomField>