force-app/main/default/objects/Account/fields/MANAGE__c.field-meta.xml
<CustomField>
    <fullName>MANAGE__c</fullName>
    <description>test</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MANAGE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>