force-app/main/default/objects/Account/fields/testing_process__c.field-meta.xml
<CustomField>
    <fullName>testing_process__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>testing process</label>
    <length>10</length>
    <type>Text</type>
</CustomField>